[package]
name = "vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chacha20 = "0.9.1"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.30"
itertools = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tun = "0.11.4"
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-attributes = { version = "0.1.27", features = ["async-await"] }
tracing-subscriber = "0.3.18"
tun-tap = "0.1.4"
