[package]
name = "vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
base64 = "0.22.1"
bincode = "2.0.0-rc.3"
bytes = "1.6.0"
chacha20 = "0.9.1"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.30"
itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
si-scale = "0.2.2"
sorted-vec = "0.8.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tun = "0.11.4"
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-appender = "0.2.3"
tracing-attributes = { version = "0.1.27", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tun-tap = "0.1.4"

[features]
default = []
bench_tap_rx = []
bench_udp_rx = []
packet_tracing = []
bench = ["bench_tap_rx", "bench_udp_rx"]
